# User-Management-Service

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  items_views.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
alembic/: env.py  script.py.mako
alembic/versions/: c0a8d914c03c_init.py  ca54695477d9_first_migration.py
api_v1/: __init__..py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
app/: main.py
auth/: functions.py  helpers.py  jwt_auth.py  utils.py  views.py
certs/: jwt-public.pem
core/: config.py
core/models/: base.py  db_helper.py  group.py  product.py  user.py
database/: create_db.py
healthcheck/: views.py
rabbitmq_management_field/: rebbitmq_management.py
redis_manager/: redis_manager.py
redis_manager_field/: redis_manager.py
scr/auth/: functions.py  helpers.py  utils.py  views.py
scr/core/: config.py
scr/core/models/: db_helper.py
scr/database/: create_db.py
scr/redis_manager_field/: redis_manager.py
scr/users/: crud.py  schemas.py  views.py
src/auth/: functions.py  helpers.py  utils.py  views.py
src/certs/: jwt-private.pem
src/config/: __init__.py
src/core/: config.py
src/core/models/: __init__.py  db_helper.py  role.py  user.py
src/database/: create_db.py
src/domain/auth/: functions.py  helpers.py  utils.py  views.py
src/domain/users/: crud.py  schemas.py  views.py
src/infrastructure/database/: create_db.py
src/infrastructure/models/: __init__.py  db_helper.py  group.py  reset_password_message.py  role.py  user.py
src/tests/: conftest.py  test_auth.py  test_user.py
src/users/: crud.py  schemas.py  views.py
tests/: conftest.py  test_auth.py  test_user.py
users/: crud.py  schemas.py  views.py
